# pnm-io

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cc  pgm_example.cc  pgm_example.h  ppm_example.cc  ppm_example.h  rgb_example.cc  rgb_example.h  simple_example.cc  simple_example.h
include/thinks/: ppm.hpp
include/thinks/pnm_io/: pnm_io.h
include/thinks/ppm_io/: ppm_io.h
test/: CMakeLists.txt  catch_utils.h  main.cpp  pgm_io_test.cc  ppm_io_test.cc
test/include/thinks/: testPpm.hpp
